@@ -8,29 +8,27 @@ import java.util.stream.Collectors;
 
 public class HrManager {
 
-	private List<Employee> allEmployees = new ArrayList<>();
+	List<Employee> allEmployees = new ArrayList<>();
 
 	Employee create(String firstName, String lastName, String dateOfBirth) {
 		Employee employee = new Employee(firstName, lastName, dateOfBirth);
 		allEmployees.add(employee);
+
 		return employee;
 	}
 
 	public List<Employee> findAll() {
-
 		return allEmployees;
 	}
 
-	public List<Employee> serchByLastName(String lastName) {
-	/*      List<Employee> foundEmployees = new ArrayList<>();
-	 	for(Employee employee: allEmployees ){
-	 		if (employee.getLastName().equals(lastName)){
-	 			foundEmployees.add(employee);
+	public List<Employee> searchByLastName(String lastName) {
+		/*List<Employee> foundEmployees = new ArrayList<>();
+		for (Employee employee:allEmployees){
+			if (employee.getLastName().equals(lastName)){
+				foundEmployees.add(employee);
 			}
 		}
 		return foundEmployees;*/
-
-		//to jest to samo
 		return allEmployees.stream().filter(employee -> employee.getLastName().contains(lastName)).collect
 			(Collectors.toList());
 		// bierzemy wcześniej utworzoną listę allEmployee.otwieramy strem, czytaj ciąg wszystkiego z tej listy.
@@ -40,33 +38,67 @@ public class HrManager {
 		// po czym collect (zbieramy) w listę, a return ją zwraca.
 	}
 
-	public List<Employee> serchByPhrase(String phrase) {
-		/*return allEmployees.stream().filter(employee -> employee.getFirsName().contains(phrase)
-			|| employee.getLastName().contains(phrase)
-			|| employee.getDateOfBirth().contains(phrase))
-			.collect(Collectors.toList());
-			*/
-		//lub tak_poprzedni kod upakowalismy w "matches"
-		return allEmployees.stream().filter(employee -> employee.matches(phrase)).collect(Collectors.toList());
+	public List<Employee> searchByPhrase(String phrase) {
 
+		return allEmployees.stream().filter(employee -> employee.matches(phrase)).collect(Collectors.toList());
 	}
 
 	public List<Employee> sortByFirstName() {
-		return allEmployees.stream().sorted().collect(Collectors.toList());
+		/*return allEmployees.stream().sorted(Comparator.comparing(Employee::getFirstName)).collect(Collectors
+			.toList()); */
+		// return allEmployees.stream().sorted().collect(Collectors.toList());
+
+		int n = allEmployees.size();
+		for (int i = 0; i < n-1; i++)
+			for (int j = 0; j < n-i-1; j++)
+				if (allEmployees.get(j).getFirstName().compareTo(allEmployees.get(j+1).getFirstName()
+				) > 0)
+				{
+					// swap temp and arr[i]
+					Employee temp = allEmployees.get(j);
+					allEmployees.set(j, allEmployees.get(j+1));
+					allEmployees.set(j+1,temp);
+				}
+		System.out.println(allEmployees);
+		return allEmployees;
 	}
 
-	public List<Employee> sortByFirstNameWithBuble() {
-		for (int j = 0; j<allEmployees.size() - 1; ++j) {
-			for (int i = 0; i < allEmployees.size() - 1; i++) {
-				if (allEmployees.get(i).getFirsName().compareTo(allEmployees.get(i + 1).getFirsName()) < 0) {
+	public List<Employee> sortByLastName() {
+		/*return allEmployees.stream().sorted(Comparator.comparing(Employee::getFirstName)).collect(Collectors
+			.toList()); */
+		// return allEmployees.stream().sorted().collect(Collectors.toList());
+		//QuickSort
+		quickSort(allEmployees, 0, allEmployees.size() - 1);
 
-					Employee temp = allEmployees.get(i);
-					allEmployees.set(i, allEmployees.get(i + 1));
-					allEmployees.set(i + 1, temp);
-				}
+		return allEmployees;
+	}
+
+	public List<Employee> quickSort(List<Employee> employees, int low, int high){
+		if (low < high)
+		{
+			int pi = partition(employees, low, high);
+
+			quickSort(employees, low, pi - 1);
+			quickSort(employees, pi + 1, high);
+		}
+		return employees;
+	}
+
+	private int partition(List<Employee> employees, int low, int high) {
+		Employee pivot = employees.get(high);
+		int i = low - 1;
+		for (int j = low; j <= high - 1; j++){
+			if(employees.get(j).getLastName().compareTo(pivot.getLastName()) <= 0){
+				i++;
+				Employee temp = employees.get(j);
+				employees.set(j, employees.get(i));
+				employees.set(i, temp);
 			}
 		}
-		return allEmployees;
+		Employee temp = employees.get(i + 1);
+		employees.set(i + 1, employees.get(high));
+		employees.set(high, temp);
+		return i + 1;
 	}
 }
 
